[package]
name = "noviy_nocd"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
goblin = "0.9.3"
iced-x86 = "1.21.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = "0.1.7"
